router: RouteFtpWriteFile change to POST & update swagger.json
